--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ c6d5ae
 
 /* Navigation Bar style */
 #navbar {
-  background-color: #c1aed5;
+  background-color: #c6d5ae;
   color: #fff;
   padding: 0;
   padding-bottom: 0;
