--- a/css/style.css
+++ b/css/style.css
@@ -201,13 +201,14 @@ c6d5ae
 
 .contact h1 {
   text-decoration: underline;
+  padding-bottom: 15px;
 }
 
 .contact img {
   width: 50px;
   height: 50px;
-  padding-right: 5px;
-  padding-left: 5px;
+  margin-right: 10px;
+  margin-left: 10px;
 }
 /* Contact style */
 
