--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,130 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
+
+html {
+    padding: 0;
+    margin: 0;
+
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #EFEFEF;
+}
+
+.nav {
+    width: 95%;
+    max-width: 1450px;
+    height: auto;
+    margin: auto;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.nav__logo {
+    position: absolute;
+    left: 0;
+    top: 40%;
+    font-size: 28px;
+    font-weight: 700;
+    color: #696969;
+}
+
+.nav__list {
+    list-style: none;
+    padding: 50px 0;
+    margin: 0;
+}
+
+.nav__link {
+    display: inline;
+    padding: 0 40px;
+    font-size: 20px;
+    font-weight: 400;
+}
+
+.nav__link a {
+    text-decoration: none;
+    color: #696969;
+}
+
+.nav__link a:hover {
+    text-decoration: underline;
+    color: #8D54CB;
+}
+
+.logo {
+    visibility: hidden;
+    height: 0;
+    width: 0;
+}
+
+@media only screen and (max-width:1024px) {
+    .nav {
+        justify-content: flex-end;
+    }
+
+    .nav__link {
+        padding: 0 20px;
+    }
+}
+
+@media only screen and (max-width:768px) {
+    .nav {
+        width: 100%;
+        position: fixed;
+        z-index: 100;
+        bottom: 0;
+        box-shadow: 0px -4px 6px #d6d6d6;
+        justify-content: space-around;
+        background-color: #EFEFEF;
+    }
+
+    .nav__logo {
+        visibility: hidden;
+    }
+
+    .nav__list {
+        list-style: none;
+        padding: 20px 0;
+        margin: 0;
+    }
+
+    .nav__link {
+        display: inline;
+        padding: 0 15px;
+        font-size: 12px;
+    }
+
+    .nav__link a {
+        text-decoration: none;
+        color: #696969;
+    }
+
+    .nav__link a:hover {
+        text-decoration: underline;
+        color: #8D54CB;
+    }
+
+    .logo {
+        width: 95%;
+        height: 60px;
+        margin: auto;
+        visibility: visible;
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        align-items: center;
+        font-size: 28px;
+        font-weight: 700;
+        color: #696969;
+    }
+}
+
+
 /*model*/
 .models {
     width: 95%;
