--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@ body {
     background-color: #EFEFEF;
 }
 
+
+/* navigation */
 .nav {
     width: 95%;
     max-width: 1450px;
@@ -95,7 +97,7 @@ body {
 
     .nav__link {
         display: inline;
-        padding: 0 15px;
+        padding: 0 10px;
         font-size: 12px;
     }
 
@@ -533,107 +535,6 @@ body {
     }
 }
 
-.skills {
-    width: 95%;
-    max-width: 1450px;
-    margin: auto;
-    margin-bottom: 100px;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.skills__title {
-    font-size: 40px;
-    font-weight: 600;
-    margin: 0;
-    margin-bottom: 25px;
-    color: #CE1C70;
-    text-align: center;
-}
-
-.skills__card {
-    width: 400px;
-    height: 100px;
-    margin-right: 30px;
-    margin-bottom: 25px;
-    border-radius: 15px;
-    box-shadow: 1px 2px 4px #d6d6d6;
-    display: inline-block;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: center;
-    background-color: #F7F7F7;
-}
-
-.skills__icon {
-    width: 100px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.skills__icon img {
-    width: 70%;
-}
-
-.skills__name {
-    width: 100%;
-    font-size: 30px;
-    font-weight: 300;
-    margin: 0 5px;
-    text-align: center;
-    color: #8D54CB;
-}
-
-@media only screen and (max-width:1024px) {
-    .skills {
-        justify-content: space-between;
-        margin-bottom: 80px;
-    }
-
-    .skills__card {
-        width: 49%;
-        height: 90px;
-        margin: 0;
-        margin-bottom: 20px;
-    }
-
-    .skills__icon {
-        width: 90px;
-    }
-}
-
-@media only screen and (max-width:768px) {
-    .skills {
-        justify-content: center;
-        margin-bottom: 50px;
-    }
-
-    .skills__title {
-        font-size: 28px;
-        font-weight: 500;
-        margin-bottom: 15px;
-    }
-
-    .skills__card {
-        width: 150px;
-        height: 55px;
-        margin: 0 8px 15px;
-    }
-
-    .skills__icon {
-        width: 55px;
-    }
-
-    .skills__name {
-        font-size: 18px;
-    }
-}
-
 
 .about {
     width: 95%;
@@ -680,7 +581,7 @@ body {
 
 .about__discription {
     margin: 0;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
     font-size: 23px;
     font-weight: 300;
     line-height: 1.5em;
