--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ body {
     width: 100%;
     margin-bottom: 20px;
     border-radius: 5px;
-    box-shadow: 1px 4px 6px #AAAAAA;
+    box-shadow: 1px 4px 6px #d6d6d6;
 }
 
 .models__title {
@@ -427,7 +427,7 @@ body {
     width: 100%;
     margin-bottom: 20px;
     border-radius: 10px;
-    box-shadow: 1px 4px 6px #AAAAAA;
+    box-shadow: 1px 4px 6px #d6d6d6;
 }
 
 .projects__designs {
@@ -440,7 +440,7 @@ body {
     width: 100%;
     margin-bottom: 20px;
     border-radius: 10px;
-    box-shadow: 1px 4px 6px #AAAAAA;
+    box-shadow: 1px 4px 6px #d6d6d6;
 }
 
 .projects__button {
@@ -452,7 +452,7 @@ body {
     cursor: pointer;
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
-    box-shadow: 1px 2px 4px #AAAAAA;
+    box-shadow: 1px 2px 4px #d6d6d6;
     color: #F8F8F8;
     background-color: #CE1C70;
 }
@@ -487,8 +487,8 @@ body {
     }
 
     .projects__title {
-        font-size: 28px;
-        font-weight: 500;
+        font-size: 26px;
+        margin-bottom: 20px;
     }
 
     .projects__container {
@@ -508,7 +508,7 @@ body {
         width: 100%;
         margin-bottom: 25px;
         border-radius: 0;
-        box-shadow: 1px 4px 6px #AAAAAA;
+        box-shadow: 1px 4px 6px #d6d6d6;
     }
 
     .projects__designs {
@@ -524,7 +524,7 @@ body {
         width: 100%;
         margin-bottom: 25px;
         border-radius: 0px;
-        box-shadow: 1px 4px 6px #AAAAAA;
+        box-shadow: 1px 4px 6px #d6d6d6;
     }
 
     .projects__button {
@@ -532,6 +532,227 @@ body {
         border-radius: 8px;
         font-size: 16px;
         margin: 0;
+    }
+}
+
+.skills {
+    width: 95%;
+    max-width: 1450px;
+    height: auto;
+    margin: auto;
+    margin-bottom: 75px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.skills__title {
+    position: relative;
+    margin-bottom: 35px;
+    font-size: 40px;
+    font-weight: 600;
+    text-align: center;
+    color: #CE1C70;
+}
+
+.skills__title::before {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: calc(50% - 220px);
+    width: 50px;
+    height: 3px;
+    background-color: #CE1C70;
+}
+
+.skills__title::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    right: calc(50% - 220px);
+    width: 50px;
+    height: 3px;
+    background-color: #CE1C70;
+}
+
+.skills__card {
+    width: 31%;
+    height: 500px;
+    margin: 0;
+    margin-top: 10px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 25px;
+    box-shadow: 1px 4px 6px #d6d6d6;
+    background-color: #F8F8F8;
+}
+
+.skills__card::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 50px;
+    z-index: -10;
+    top: -15px;
+    border-radius: 25px 25px 0 0;
+    background-color: #D57CA6;
+}
+
+.skills__card:nth-child(2):before {
+    background-color: #96A4D3;
+}
+
+.skills__card:nth-child(3):before {
+    background-color: #B598D5;
+}
+
+.skills__icon {
+    width: 100px;
+    margin: auto;
+    margin-top: 35px;
+    height: auto;
+}
+
+.skills__icon img {
+    width: 100%;
+}
+
+.skills__cardTitle {
+    margin: 0;
+    margin: 20px 0 5px;
+    font-size: 26px;
+    font-weight: 600;
+    color: #696969;
+}
+
+.skills__list {
+    width: 75%;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 45px;
+    color: #F8F8F8;
+}
+
+.skills__list li {
+    margin: 15px 0;
+    border-radius: 25px;
+}
+
+@media only screen and (max-width:1024px) {
+    .skills {
+        margin-bottom: 50px;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .skills__card {
+        width: 100%;
+        height: 180px;
+        margin-bottom: 40px;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .skills__card::before {
+        top: -10px;
+    }
+
+    .skills__icon {
+        width: 100px;
+        margin: 0;
+        height: auto;
+    }
+
+    .skills__cardTitle {
+        margin: 0;
+        font-size: 22px;
+    }
+
+    .skills__left {
+        width: 300px;
+        min-width: 300px;
+        height: auto;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .skills__list {
+        width: auto;
+        font-size: 18px;
+        line-height: 1em;
+    }
+
+    .skills__list li {
+        margin: 8px 10px;
+        padding: 10px 20px;
+        float: left;
+        border-radius: 25px;
+    }
+}
+
+@media only screen and (max-width:768px) {
+    .skills {
+        margin-bottom: 30px;
+    }
+
+    .skills__title {
+        font-size: 26px;
+        margin-bottom: 25px;
+    }
+
+    .skills__title::before {
+        width: 25px;
+        left: calc(50% - 135px);
+    }
+
+    .skills__title::after {
+        width: 25px;
+        right: calc(50% - 135px);
+    }
+
+    .skills__card {
+        height: auto;
+        padding-bottom: 25px;
+        margin-bottom: 20px;
+        flex-direction: column;
+    }
+
+    .skills__icon {
+        width: 80px;
+    }
+
+    .skills__cardTitle {
+        margin: 10px 0 5px;
+        font-size: 20px;
+    }
+
+    .skills__left {
+        width: 100%;
+        min-width: none;
+        height: auto;
+        margin-top: 20px;
+    }
+
+    .skills__list {
+        font-size: 16px;
+        left: 50%;
+        padding: 0 20px;
+        margin: auto;
+
+    }
+
+    .skills__list li {
+        margin: 8px 8px;
     }
 }
 
@@ -597,7 +818,7 @@ body {
     font-family: 'Poppins', sans-serif;
     cursor: pointer;
     text-decoration: none;
-    box-shadow: 1px 2px 4px #AAAAAA;
+    box-shadow: 1px 2px 4px #d6d6d6;
     color: #F8F8F8;
     background-color: #CE1C70;
 }
