--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ body {
 
 .nav__list {
     list-style: none;
-    padding: 50px 0;
+    padding: 40px 0;
     margin: 0;
 }
 
@@ -55,15 +55,15 @@ body {
 .nav__link {
     display: inline;
     position: relative;
-    padding: 0 40px;
+    padding: 0 30px;
     font-size: 20px;
-    font-weight: 500;
+    font-weight: 400;
 }
 
 .nav__link::after {
     content: '';
     width: calc(100% - 40px);
-    height: 3px;
+    height: 2px;
     position: absolute;
     bottom: 0;
     right: 0;
@@ -84,13 +84,13 @@ body {
     position: relative;
     padding: 0 40px;
     font-size: 20px;
-    font-weight: 500;
+    font-weight: 400;
 }
 
 .nav__linkActive::after {
     content: '';
     width: calc(100% - 40px);
-    height: 3px;
+    height: 2px;
     position: absolute;
     bottom: 0;
     right: 0;
@@ -160,7 +160,7 @@ body {
 
     .nav__link::after {
         width: calc(100% - 10px);
-        height: 2px;
+        height: 1px;
         left: 5px;
     }
 
@@ -172,7 +172,7 @@ body {
 
     .nav__linkActive::after {
         width: calc(100% - 10px);
-        height: 2px;
+        height: 1px;
         left: 5px;
     }
 
@@ -182,7 +182,6 @@ body {
     }
 
     .nav__link a:hover {
-        text-decoration: underline;
         color: #8D54CB;
     }
 
@@ -943,4 +942,142 @@ body {
 
 .highlight {
     color: #CE1C70;
+}
+
+
+
+/* contact */
+.contact__background {
+    width: 100%;
+    height: 100vh;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('../images/WizardSceneRender.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact {
+    width: 95%;
+    max-width: 1450px;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.contact h2 {
+    font-size: 22px;
+    font-weight: 500;
+    margin: 0px;
+    color: #EFEFEF;
+}
+
+.contact input {
+    width: 50%;
+    min-width: 300px;
+    margin: 10px 0 50px;
+    padding: 8px 10px;
+    border-radius: 5px;
+    border: 0;
+    font-size: 18px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    color: #696969;
+}
+
+.contact input:focus {
+    outline: none;
+    border: 2px solid #516DC9;
+}
+
+.contact textarea {
+    width: 50%;
+    min-width: 300px;
+    height: 200px;
+    margin: 10px 0 50px;
+    padding: 8px 10px;
+    border-radius: 5px;
+    border: 0;
+    font-size: 18px;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 500;
+    line-height: 1.5em;
+    resize: none;
+    color: #696969;
+}
+
+.contact textarea:focus {
+    outline: none;
+    border: 2px solid #516DC9;
+}
+
+.contact button {
+    font-size: 22px;
+    font-weight: 500;
+    padding: 5px 35px;
+    border-radius: 5px;
+    border: 0;
+    color: #EFEFEF;
+    background-color: #CE1C70;
+}
+
+@media only screen and (max-width:1024px) {
+    .contact input {
+        font-size: 16px;
+    }
+
+    .contact textarea {
+        font-size: 16px;
+    }
+}
+
+@media only screen and (max-width:768px) {
+
+    .contact h2 {
+        font-size: 18px;
+    }
+
+    .contact input {
+        font-size: 12px;
+        margin-bottom: 25px;
+    }
+
+    .contact textarea {
+        height: 150px;
+        font-size: 12px;
+    }
+
+    .contact button {
+        font-size: 18px;
+    }
+}
+
+
+/* Thank You */
+
+
+.thanks {
+    margin: 0;
+    text-align: center;
+    font-size: 60px;
+    font-weight: 600;
+    line-height: 1.5em;
+    color: #EFEFEF;
+}
+
+@media only screen and (max-width:1024px) {
+    .thanks {
+        font-size: 50px;
+    }
+}
+
+@media only screen and (max-width:768px) {
+    .thanks {
+        font-size: 40px;
+    }
 }
