adjusted entire page

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #EFEFEF;
+    background-color: #f3f3f3;
 }
 
 
@@ -47,15 +47,11 @@ body {
     color: #696969;
 }
 
-.nav__list a:hover {
-    color: #8D54CB;
-}
-
 
 .nav__link {
     display: inline;
     position: relative;
-    padding: 0 30px;
+    padding: 0 35px;
     font-size: 20px;
     font-weight: 400;
 }
@@ -72,7 +68,7 @@ body {
     transform-origin: center;
     transition: transform 250ms ease-in-out;
     transform: scaleX(0);
-    background-color: #8D54CB;
+    background-color: #516DC9;
 }
 
 .nav__link:hover::after {
@@ -96,7 +92,7 @@ body {
     right: 0;
     left: 20px;
     border-radius: 20px;
-    background-color: #8D54CB;
+    background-color: #516DC9;
 }
 
 .logo {
@@ -464,7 +460,7 @@ body {
 .projects__background {
     width: 100%;
     height: auto;
-    background-color: #E1D8EA;
+    background-color: #516DC9;
 }
 
 .projects {
@@ -475,12 +471,13 @@ body {
 }
 
 .projects__title {
-    font-size: 40px;
+    font-size: 50px;
     font-weight: 600;
     margin: 0;
-    margin-bottom: 50px;
+    margin-top: -20px;
+    margin-bottom: 40px;
     text-align: center;
-    color: #696969;
+    color: #F8F8F8;
 }
 
 .projects__container {
@@ -501,7 +498,7 @@ body {
     width: 100%;
     margin-bottom: 20px;
     border-radius: 10px;
-    box-shadow: 1px 4px 6px #d6d6d6;
+    box-shadow: 1px 4px 6px rgb(0 0 0 / 0.16);
 }
 
 .projects__designs {
@@ -514,11 +511,12 @@ body {
     width: 100%;
     margin-bottom: 20px;
     border-radius: 10px;
-    box-shadow: 1px 4px 6px #d6d6d6;
+    box-shadow: 1px 4px 6px rgb(0 0 0 / 0.16);
 }
 
 .projects__button {
-    padding: 10px 30px;
+    margin-top: 20px;
+    padding: 5px 30px;
     border-radius: 10px;
     border: 0px;
     font-size: 20px;
@@ -526,9 +524,9 @@ body {
     cursor: pointer;
     text-decoration: none;
     font-family: 'Poppins', sans-serif;
-    box-shadow: 1px 2px 4px #d6d6d6;
-    color: #F8F8F8;
-    background-color: #CE1C70;
+    box-shadow: 1px 2px 4px rgb(0 0 0 / 0.16);
+    color: #516DC9;
+    background-color: #F8F8F8;
 }
 
 @media only screen and (max-width: 1024px) {
@@ -545,7 +543,7 @@ body {
     }
 
     .projects__button {
-        padding: 10px 20px;
+        padding: 5px 20px;
         font-size: 18px;
         font-weight: 500;
     }
@@ -578,7 +576,6 @@ body {
         width: 100%;
         margin-bottom: 25px;
         border-radius: 0;
-        box-shadow: 1px 4px 6px #d6d6d6;
     }
 
     .projects__designs {
@@ -595,7 +592,6 @@ body {
         width: 100%;
         margin-bottom: 25px;
         border-radius: 0px;
-        box-shadow: 1px 4px 6px #d6d6d6;
     }
 
     .projects__button {
@@ -611,7 +607,7 @@ body {
     max-width: 1450px;
     height: auto;
     margin: auto;
-    margin-bottom: 75px;
+    margin-bottom: 100px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -619,31 +615,32 @@ body {
 
 .skills__title {
     position: relative;
-    margin-bottom: 35px;
-    font-size: 40px;
+    margin-bottom: 50px;
+    margin-top: 75px;
+    font-size: 50px;
     font-weight: 600;
     text-align: center;
-    color: #CE1C70;
+    color: #516DC9;
 }
 
 .skills__title::before {
     content: '';
     position: absolute;
     top: 50%;
-    left: calc(50% - 220px);
+    left: calc(50% - 260px);
     width: 50px;
     height: 3px;
-    background-color: #CE1C70;
+    background-color: #516DC9;
 }
 
 .skills__title::after {
     content: '';
     position: absolute;
     top: 50%;
-    right: calc(50% - 220px);
+    right: calc(50% - 260px);
     width: 50px;
     height: 3px;
-    background-color: #CE1C70;
+    background-color: #516DC9;
 }
 
 .skills__card {
@@ -704,7 +701,7 @@ body {
     margin: 0;
     padding: 0;
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 500;
     text-align: center;
     vertical-align: middle;
     line-height: 45px;
@@ -712,7 +709,7 @@ body {
 }
 
 .skills__list li {
-    margin: 15px 0;
+    margin: 15px 0 20px;
     border-radius: 25px;
 }
 
@@ -721,6 +718,20 @@ body {
         margin-bottom: 50px;
         flex-direction: column;
         justify-content: center;
+    }
+
+    .skills__title {
+        margin-bottom: 40px;
+        margin-top: 65px;
+        font-size: 40px;
+    }
+
+    .skills__title::before {
+        left: calc(50% - 220px);
+    }
+    
+    .skills__title::after {
+        right: calc(50% - 220px);
     }
 
     .skills__card {
@@ -779,6 +790,7 @@ body {
     .skills__title {
         font-size: 26px;
         margin-bottom: 25px;
+        margin-top: 40px;
     }
 
     .skills__title::before {
@@ -833,7 +845,6 @@ body {
     height: auto;
     max-width: 1450px;
     margin: auto;
-    margin-bottom: 100px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -841,30 +852,36 @@ body {
 }
 
 .about__headshot {
-    width: 40%;
+    width: 60%;
+    margin-left: -170px;
     position: relative;
 }
 
 .about__headshot img {
     width: 100%;
+    display: block;
 }
 
-.about__headshotBlob {
-    height: 700px;
-    position: absolute;
-    top: -20%;
-    right:  -35%;
-    z-index: -1;
+.about__headshotSmall {
+    width: 0px;
+    height: 0px;
+    margin: 0px;
+    padding: 0px;
+    visibility: hidden;
+}
+
+.about__headshotSmall img {
+    width: 100%;
 }
 
 .about__info {
     width: 60%;
-    padding-left: 45px;
+    padding-left: 25px;
 }
 
 .about__title {
     margin: 0;
-    margin-bottom: 25px;
+    margin-bottom: 15px;
     font-size: 32px;
     font-weight: 500;
     line-height: 1.3em;
@@ -873,18 +890,18 @@ body {
 
 .about__discription {
     margin: 0;
-    margin-bottom: 15px;
+    margin-bottom: 40px;
     font-size: 23px;
     font-weight: 300;
-    line-height: 1.8em;
+    line-height: 1.6em;
     color: #696969;
 }
 
 .about__button {
-    padding: 5px 60px;
+    padding: 5px 40px;
     border-radius: 13px;
     border: 0px;
-    font-size: 26px;
+    font-size: 20px;
     font-weight: 600;
     font-family: 'Poppins', sans-serif;
     cursor: pointer;
@@ -898,11 +915,22 @@ body {
 @media only screen and (max-width: 1024px) {
     .about {
         flex-direction: column;
+        margin-bottom: 70px;
+    }
+
+    .about__headshotSmall {
+        width: 55%;
+        height: auto;
+        margin-bottom: 25px;
+        margin: auto;
+        visibility: visible;
     }
 
     .about__headshot {
-        width: 65%;
-        margin-bottom: 25px;
+        height: 0px;
+        width: 0px;
+        display: none;
+        visibility:collapse;
     }
 
     .about__info {
@@ -912,29 +940,33 @@ body {
     }
 
     .about__title {
-        margin-bottom: 15px;
+        margin-bottom: 35px;
         font-size: 28px;
     }
 
     .about__discription {
+        margin-top: 30px;
         font-size: 22px;
     }
 }
 
 @media only screen and (max-width: 768px) {
+    .about {
+        margin-bottom: 100px;
+    }
 
     .about__title {
-        margin-bottom: 10px;
+        margin-bottom: 20px;
         font-size: 22px;
     }
 
     .about__discription {
         font-size: 16px;
-        margin-bottom: 15px;
+        margin-top: 20px;
+        margin-bottom: 25px;
     }
 
     .about__button {
-        padding: 5px 40px;
         border-radius: 8px;
         font-size: 16px;
     }
