--- a/css/modelSlides.css
+++ b/css/modelSlides.css
@@ -139,6 +139,7 @@
     width: 95%;
     max-width: 1450px;
     margin: auto;
+    padding-top: 20px;
     margin-bottom: 100px;
     text-align: center;
 }
